@@ -482,4 +482,18 @@ public class SampleCountInfo {
         float count = (float) getGenotypeCount(genotypeIndex);
         return count / ((float) sum);
     }
+
+    /**
+     * Return the number of bases that cover this site, irrespective of genotype.
+     *
+     * @return the coverage at the site.
+     */
+    public int coverage() {
+       int coverage=0;
+        for (int genotypeIndex=0; genotypeIndex<getGenotypeMaxIndex(); genotypeIndex++){
+            coverage+=getGenotypeCount(genotypeIndex);
+
+        }
+        return coverage;
+    }
 }
